# word16-test

./: CHANGELOG.md  word16-test.cabal
app/: Main.hs
